// Vitest Snapshot v1

exports[`<TargetItem /> > should render when [canModify=false] 1`] = `
<BoxGroupSection>
  <styled.h3>
    foo
  </styled.h3>
  <styled.p
    description="bar"
  >
    bar
  </styled.p>
</BoxGroupSection>
`;

exports[`<TargetItem /> > should render when [canModify=true] 1`] = `
<BoxGroupSection>
  <styled.h3>
    foo
    <span>
      <Icon
        aria-label="edit"
        color="orange"
        name="edit"
        onClick={[Function]}
        tip="Modify"
      />
      <Icon
        aria-label="remove"
        color="red"
        name="trash"
        onClick={[Function]}
        tip="Remove"
      />
    </span>
  </styled.h3>
  <styled.p
    description="bar"
  >
    bar
  </styled.p>
</BoxGroupSection>
`;

exports[`<TargetItem /> > should render with no description 1`] = `
<BoxGroupSection>
  <styled.h3>
    foo
    <span>
      <Icon
        aria-label="edit"
        color="orange"
        name="edit"
        onClick={[Function]}
        tip="Modify"
      />
      <Icon
        aria-label="remove"
        color="red"
        name="trash"
        onClick={[Function]}
        tip="Remove"
      />
    </span>
  </styled.h3>
  <styled.p
    description=""
  >
    No description
  </styled.p>
</BoxGroupSection>
`;
